<?xml version="1.0"?>
<package format="3">
  <name>g_slam</name>
  <version>0.0.0</version>
  <description>G-SLAM package</description>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <maintainer email="aleix.vallhonrat@email.com">Vallu</maintainer>
  <license>TODO</license>


<!-- TODO: ACTUALITZAR... -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>cat_msgs</depend>


  <!-- <depend>libboost-system-dev</depend>
  <depend>libtbb-dev</depend> -->
  <depend>libeigen3-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>